<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_periksa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PeriksaFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:src="@drawable/bg_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/text_background" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="Senin, 1 Juni 2020"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile_pic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:scaleType="centerCrop"
        android:scaleY="1"
        android:src="@drawable/dummy_photo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date" />

    <TextView
        android:id="@+id/tv_nama_pasien"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Pasien Sample"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="60dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_nim_pasien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_profile_pic"
        app:layout_constraintTop_toTopOf="@+id/image_profile_pic"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_nim_pasien"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Jenis Kelamin"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_profile_pic"
        app:layout_constraintEnd_toEndOf="@+id/tv_nama_pasien"
        app:layout_constraintStart_toStartOf="@+id/tv_nama_pasien"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_pasien" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/cons_data_pasien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/text_diagnosa"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />


            <TextView
                android:id="@+id/label_penyakit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_penyakit"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cons_data_pasien" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_penyakit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:labelFor="@id/et_penyakit"
                app:layout_constraintTop_toBottomOf="@+id/label_penyakit">

                <EditText
                    android:id="@+id/et_penyakit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/text_penyakit"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/label_obat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/text_obat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_penyakit" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_obat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:labelFor="@id/et_obat"
                app:layout_constraintTop_toBottomOf="@+id/label_obat">

                <EditText
                    android:id="@+id/et_obat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/text_obat"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/label_catatan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/text_catatan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_obat" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_catatan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:labelFor="@id/et_catatan"
                app:layout_constraintTop_toBottomOf="@+id/label_catatan">

                <EditText
                    android:id="@+id/et_catatan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/text_catatan"
                    android:inputType="textMultiLine|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_catatan">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_keluhan"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_keluhan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        tools:listitem="@layout/item_keluhan" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_action_button"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="@string/text_selesai_periksa"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/antriColor"
        app:icon="@drawable/ic_check_48"
        app:iconTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>